Add exec command

--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -3,11 +3,36 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="3.4.15" />
+    <PackageReference Include="Nemesis.Essentials" Version="1.1.1" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="lib\cicee-exec.sh" />
+    <Content Include="lib\cicee-exec.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Remove="lib\docker-compose.yml" />
+    <Content Include="lib\docker-compose.yml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Remove="lib\Dockerfile" />
+    <Content Include="lib\Dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Remove="lib\ci-env-display.sh" />
+    <Content Include="lib\ci-env-display.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Remove="lib\ci-env-load.sh" />
+    <Content Include="lib\ci-env-load.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
