--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -2,8 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <LangVersion>9</LangVersion>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>cicee</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
