--- a/.github/workflows/publish-prerelease.yml
+++ b/.github/workflows/publish-prerelease.yml
@@ -19,3 +19,4 @@ jobs:
       env:
         GITHUB_OWNER: ${{secrets.GH_PACKAGES_OWNER}}
         GITHUB_AUTH_TOKEN: ${{secrets.GH_PACKAGES_TOKEN}}
+        NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
