Fix missing NuGet API Key in docker-compose environment

--- a/docker-compose.ci.project.yml
+++ b/docker-compose.ci.project.yml
@@ -5,12 +5,12 @@ version: "3.7"
 ##
 
 services:
-
   ci-exec:
     # depends_on:
     #   - ci-generate-nuget-config
-    # environment:
+    environment:
       # Environment variables with only a key are resolved to their values on the machine running (Docker) Compose.
       #--
       # Project
       #--
+      NUGET_API_KEY:
