--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -1,20 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <AssemblyName>cicee</AssemblyName>
     <LangVersion>9</LangVersion>
-    <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
+    <Authors>jds</Authors>
+    <Company />
+    <Copyright>Copyright 2021 Jeremiah Sanders</Copyright>
+    <Description>Continuous Integration Containerized Execution Environment</Description>
     <PackAsTool>true</PackAsTool>
+    <PackageId>cicee</PackageId>
+    <PackageVersion>0.0.0</PackageVersion>
+    <Product>cicee</Product>
+    <Title>CICEE</Title>
     <ToolCommandName>cicee</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="3.4.15" />
-    <PackageReference Include="Nemesis.Essentials" Version="1.1.1" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
   </ItemGroup>
 
