Add ability to initialize /ci/bin

--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -32,10 +32,6 @@
     <Content Include="lib\cicee-exec.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="templates\init\Template.Dockerfile">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <None Remove="lib\docker-compose.yml" />
     <Content Include="lib\docker-compose.dockerfile.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -45,20 +41,37 @@
     <Content Include="lib\docker-compose.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Remove="templates\init\Dockerfile" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="templates\init\bin\ci-actions.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\init\bin\ci-workflows.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\init\Template.Dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>  
     <Content Include="templates\init\Default.Dockerfile">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Remove="templates\init\example.env" />
     <Content Include="templates\init\example.ci.env">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Remove="templates\init\docker-compose.project.yml" />
     <Content Include="templates\init\docker-compose.project.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Remove="templates\init\docker-compose.dependencies.yml" />
     <Content Include="templates\init\docker-compose.dependencies.yml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\init\bin\compose.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\init\bin\publish.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="templates\init\bin\validate.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
