--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,2 +1,4 @@
-# ${PROJECT_ROOT}/ci/lib/Dockerfile
-FROM cicee:latest AS project-build-environment
+# Universal, base image
+#   See: https://registry.hub.docker.com/_/microsoft-vscode-devcontainers?tab=description
+#   See: https://github.com/microsoft/vscode-dev-containers/tree/master/containers/codespaces-linux
+FROM mcr.microsoft.com/vscode/devcontainers/universal:linux AS build-environment
