--- a/ci/docker-compose.project.yml
+++ b/ci/docker-compose.project.yml
@@ -5,12 +5,15 @@ version: "3.7"
 ##
 
 services:
+  # cicee execution service.
   ci-exec:
     # depends_on:
-    #   - ci-generate-nuget-config
+    #   - pg
     environment:
       # Environment variables with only a key are resolved to their values on the machine running (Docker) Compose.
       #--
       # Project
       #--
       NUGET_API_KEY:
+    # NOTE: Root user specified below helps address permissions errors when using the default CICEE Dockerfile.
+    user: root
