--- a/ci/docker-compose.project.yml
+++ b/ci/docker-compose.project.yml
@@ -15,5 +15,6 @@ services:
       # Project
       #--
       NUGET_API_KEY:
+      NUGET_SOURCE:
     # NOTE: Root user specified below helps address permissions errors when using the default CICEE Dockerfile.
     user: root
