--- a/.github/workflows/validate-project.yml
+++ b/.github/workflows/validate-project.yml
@@ -14,5 +14,4 @@ jobs:
       - name: Execute verification script - Validate source
         run: bin/cicee-exec-validate.sh
         env:
-          GITHUB_OWNER: ${{secrets.GH_PACKAGES_OWNER}}
-          GITHUB_AUTH_TOKEN: ${{secrets.GH_PACKAGES_TOKEN}}
+          NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
