Fix publishing failure caused by missing NuGet source

--- a/.github/workflows/publish-prerelease.yml
+++ b/.github/workflows/publish-prerelease.yml
@@ -18,3 +18,4 @@ jobs:
         run: bin/cicee-exec-compose.sh
         env:
           NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
+          NUGET_SOURCE: ${{secrets.NUGET_SOURCE}}
