--- a/.github/workflows/validate-project.yml
+++ b/.github/workflows/validate-project.yml
@@ -15,3 +15,4 @@ jobs:
         run: bin/cicee-exec-validate.sh
         env:
           NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
+          NUGET_SOURCE: ${{secrets.NUGET_SOURCE}}
