feat: add .NET 6 support

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,4 +1,1 @@
-# Universal, base image
-#   See: https://registry.hub.docker.com/_/microsoft-vscode-devcontainers?tab=description
-#   See: https://github.com/microsoft/vscode-dev-containers/tree/master/containers/codespaces-linux
-FROM mcr.microsoft.com/vscode/devcontainers/universal:linux AS build-environment
+FROM gnosian/ci-env-dotnet AS build-environment
