--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <AssemblyName>cicee</AssemblyName>
-    <LangVersion>9</LangVersion>
+    <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>net6.0;net5.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
