--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -15,6 +15,8 @@
     <Description>Continuous Integration Containerized Execution Environment</Description>
     <PackageId>cicee</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/JeremiahSanders/cicee</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackAsTool>true</PackAsTool>
     <Product>cicee</Product>
     <RepositoryType>git</RepositoryType>
@@ -89,6 +91,13 @@
     <Content Include="templates\init\bin\validate.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Include=".\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
