--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -56,6 +56,9 @@
     <Content Include="lib\ci\bash\utils.sh">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="lib\ci\bash\exec.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="lib\docker-compose.dockerfile.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
