fix: include docker-compose.ci-lib.yml in package

--- a/src/Cicee.csproj
+++ b/src/Cicee.csproj
@@ -68,6 +68,9 @@
     <Content Include="lib\docker-compose.yml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="lib\docker-compose.ci-lib.yml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   
   <ItemGroup>
