feat: add .NET 7 support

--- a/.github/workflows/validate-project.yml
+++ b/.github/workflows/validate-project.yml
@@ -16,3 +16,8 @@ jobs:
         env:
           NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
           NUGET_SOURCE: ${{secrets.NUGET_SOURCE}}
+      - name: Execute compose script - Dry-run composition
+        run: bin/cicee-exec-compose.sh
+        env:
+          NUGET_API_KEY: ${{secrets.NUGET_API_KEY}}
+          NUGET_SOURCE: ${{secrets.NUGET_SOURCE}}
