--- a/tests/integration/Cicee.Tests.Integration.csproj
+++ b/tests/integration/Cicee.Tests.Integration.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Cicee.csproj" />
+    <ProjectReference Include="..\unit\Cicee.Tests.Unit.csproj" />
   </ItemGroup>
 
 </Project>
