feat: add support for 'docker compose' and 'docker-compose'

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,1 +1,4 @@
 FROM gnosian/ci-env-dotnet AS build-environment
+
+# Add exception for known `cicee exec` mount directory. Without this, GitHub Actions fails to resolve current commit SHA (which defaults to "0000000").
+RUN git config --global --add safe.directory /code
